# pdf-ocr

./: README.md  pyproject.toml
pdf_ocr/: __init__.py  __main__.py  cli.py  config.py  convert.py  engine_factory.py  gpu.py  offline.py  parallel.py  pdf_input.py  server.py  storage.py
pdf_ocr/hf_jobs/: hf_job_runner.py
pdf_ocr/models/: deepseek_ocr_2.yaml  lighton_ocr_2_1b.yaml
tests/: test_api.py  test_cli.py  test_config.py  test_convert.py  test_engine_factory.py  test_gpu.py  test_hf_job_runner.py  test_integration.py  test_offline.py  test_parallel.py  test_pdf_input.py  test_server.py  test_storage.py
